style: fix overflow

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -475,8 +475,9 @@ a.user_avatar:hover {
   line-height: 48px;
 }
 a.topic_title {
-    max-width: 700px;
+    max-width: 70%;
     text-overflow: ellipsis;
+    -o-text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
     display: inline-block;
